@@ -6,17 +6,17 @@
 ;;   the terms of this license.
 ;;   You must not remove this notice, or any other, from this software.
 
-(defproject uncomplicate/clojurecl "0.7.2"
+(defproject uncomplicate/clojurecl "0.8.0-SNAPSHOT"
   :description "ClojureCL is a Clojure library for parallel computations with OpenCL."
   :url "https://github.com/uncomplicate/clojurecl"
   :scm {:name "git"
         :url "https://github.com/uncomplicate/clojurecl"}
   :license {:name "Eclipse Public License"
             :url "http://www.eclipse.org/legal/epl-v10.html"}
-  :dependencies [[org.clojure/clojure "1.8.0"]
+  :dependencies [[org.clojure/clojure "1.9.0"]
                  [org.jocl/jocl "2.0.0"]
-                 [org.clojure/core.async "0.3.442"]
-                 [uncomplicate/commons "0.3.1"]
+                 [org.clojure/core.async "0.3.465"]
+                 [uncomplicate/commons "0.4.0-SNAPSHOT"]
                  [vertigo "0.1.4"]]
 
   :codox {:metadata {:doc/format :markdown}
@@ -24,13 +24,14 @@
           :src-linenum-anchor-prefix "L"
           :output-path "docs/codox"}
 
-  :profiles {:dev {:plugins [[lein-midje "3.2"]
-                             [lein-codox "0.10.1"]]
+  :profiles {:dev {:plugins [[lein-midje "3.2.1"]
+                             [lein-codox "0.10.3"]]
                    :global-vars {*warn-on-reflection* true
                                  *assert* true
                                  *unchecked-math* :warn-on-boxed
                                  *print-length* 128}
-                   :dependencies [[midje "1.8.3"]]}}
+                   :dependencies [[midje "1.9.0"]]
+                   :jvm-opts ^:replace ["--add-opens=java.base/jdk.internal.ref=ALL-UNNAMED"]}}
 
   :javac-options ["-target" "1.8" "-source" "1.8" "-Xlint:-options"]
   :source-paths ["src/clojure" "src/opencl"]
